# OpenGL_Study

./: CMakeLists.txt
chapter_1/: firstWindow.cpp
common/: shader.cpp  shader.hpp
scripts/: build.sh
